@@ -34,7 +34,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.xmlunit.assertj.XmlAssert;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -102,7 +101,7 @@ public class PipelineXmlRepresenterTest {
 
     private List<Modification> modifications() {
         Date date = DateUtils.parseISO8601("2019-12-31T15:31:49+05:30");
-        return Arrays.asList(
+        return List.of(
             modification(date, "Bob", "Adding build.xml", "3", "build.xml", ModifiedAction.added),
             modification(date, "Sam", "Fixing the not checked in files", "2", "tools/bin/go.jruby", ModifiedAction.added),
             modification(date, "Sam", "Adding .gitignore", "1", ".gitignore", ModifiedAction.modified)
